--- a/src/app/clients/users/inactive-user-list/inactive-user-list.component.html
+++ b/src/app/clients/users/inactive-user-list/inactive-user-list.component.html
@@ -1,3 +1,4 @@
+<div class="h-full overflow-y-scroll">
 <!-- Main Container -->
 <div class="flex-col justify-between w-full sm:pt-12 sm:pl-4" id="main-content">
   <!-- HEADER -->
@@ -136,6 +137,7 @@
               <th>Nombres</th>
               <th>Apellidos</th>
               <th>Cédula</th>
+              <th>Fecha registro</th>
               <th>Correo electrónico</th>
               <th>Cliente</th>
               <th>Sede</th>
@@ -165,6 +167,7 @@
                 <td class="p-2">{{ user.lastName }}</td>
                 <td class="p-2">{{ user.documentNumber }}</td>
                 <td class="p-2">{{ user.email }}</td>
+                <td class="p-2"></td>
                 <td class="p-2">{{ user.client }}</td>
                 <td class="p-2">{{ user.office }}</td>
                 <td class="p-2">
@@ -208,3 +211,4 @@
   </div>
 </div>
 <!-- End Main Container -->
+</div>
