--- a/src/app/booking/booking-list/booking-list.component.html
+++ b/src/app/booking/booking-list/booking-list.component.html
@@ -160,7 +160,7 @@
         </thead>
         <tbody>
           
-          <ng-container >
+          <ng-container *ngIf="loadingDOM">
             <tr *ngFor="let reserva of booking.reservations; let i = index;" [ngClass]="{'bg-gray-200': i % 2 === 0}" class="text-center">
               <td class="p-2">
                 {{reserva.createdAt | date}}
@@ -178,11 +178,11 @@
               </td>
               <td class="justify-center p-2">
                 <span class="cursor-pointer focus:outline-none text-brand hover:text-green-900"
-                (click)="openViajes(0,1)">3</span> 
+                (click)="openViajes(reserva.travels)">{{ reserva.travels?.length }}</span> 
               </td>
               <td class="justify-center p-2">
                 <span class="cursor-pointer focus:outline-none text-brand hover:text-green-900"
-                (click)="openCalificacion(0, 0)">{{reserva.rating}} {{reserva.comments}}</span> 
+                (click)="openCalificacion(reserva.rating, reserva.comments)">{{reserva.rating}}</span> 
               </td>
               <td class="justify-center flex p2">
                 <span class="cursor-pointer focus:outline-none text-brand hover:text-green-900"
@@ -329,20 +329,10 @@
       </div>
       <div class="px-12 py-12 overflow-y-auto bg-white sm:flex-row sm:items-start max-h-96">
        <!-- Client Table Desktop only -->
-       <div class="space-y-1">
-        <div><h3><b>Viaje 1:</b></h3></div>
-        <div><p> Desde: Calle 96 a 21</p></div>
-        <div><p> Hasta: Carrera 54 # 67 b 3</p></div>
-      </div>
-      <div class="space-y-1">
-        <div><h3><b>Viaje 2:</b></h3></div>
-        <div><p> Desde: Calle 96 a 21</p></div>
-        <div><p> Hasta: Carrera 54 # 67 b 3</p></div>
-      </div>
-      <div class="space-y-1">
-        <div><h3><b>Viaje 3:</b></h3></div>
-        <div><p> Desde: Calle 96 a 21</p></div>
-        <div><p> Hasta: Carrera 54 # 67 b 3</p></div>
+       <div class="space-y-1" *ngFor="let travel of travelsModal; let i = index;">
+        <div><h3><b>Viaje {{ i + 1 }}:</b></h3></div>
+        <div><p> Desde: {{ travel.createdAt | date }}</p></div>
+        <div><p> dirección: {{ travel.destination }}</p></div>
       </div>
       <!-- End Client Table Desktop only -->
       </div>
