--- a/src/app/clients/user-form/user-form.component.html
+++ b/src/app/clients/user-form/user-form.component.html
@@ -335,6 +335,7 @@
             >
               {{title}}
               <svg
+                *ngIf="actualizar != false"
                 xmlns="http://www.w3.org/2000/svg"
                 class="w-4 h-4 animate-spin"
                 fill="none"
