--- a/src/app/check-ups/check-ups-history/check-ups-history.component.html
+++ b/src/app/check-ups/check-ups-history/check-ups-history.component.html
@@ -73,18 +73,17 @@
            <div class="flex flex-col flex-1 my-3 lg:my-0 mx-4 w-full">
             <label class="text-gray-400" for="client">Días estado:</label>
             <select
-              name="client"
-              [(ngModel)]="client"
-              id="client"
-              (ngModelChange)="selectClient()"
-              class="bg-gray-100 rounded-md focus:ring-brand focus:outline-none focus:border-brand w-full"
-            >
-              <option [value]="''">A tiempo</option>
-              <option [value]="''">entre 1 y 3 días</option>
-              <option [value]="''">Entre 4 y 5 días</option>
-              <option [value]="''">Más de 6 días</option>
-
-            </select>
+            name="days"
+            [(ngModel)]="days"
+            id="days"
+            (ngModelChange)="selectClient()"
+            class="bg-gray-100 rounded-md focus:ring-brand focus:outline-none focus:border-brand w-full"
+          >
+            <option [value]="'0'">A tiempo</option>
+            <option [value]="'3'">entre 1 y 3 días</option>
+            <option [value]="'5'">Entre 4 y 5 días</option>
+            <option [value]="'6'">Más de 6 días</option>
+          </select>
           </div>
           <div class="flex flex-row flex-1 my-3 lg:my-0 mx-4 w-1/2">
             <!-- Reference -->
