[USERS] - Cambios user, maintance

--- a/src/app/clients/user-list/user-list.component.html
+++ b/src/app/clients/user-list/user-list.component.html
@@ -116,7 +116,7 @@
       <!-- End title line -->
 
       <!-- Pestañas -->
-      <div class="mt-8 flex-row flex">
+      <div class="flex-row flex ml-10">
         <a
           class="hover:underline hover:text-brand flex-row flex mr-4"
           [routerLink]="['/clientes', client.id, 'usuarios']"
