--- a/src/app/maintenance/maintenance-history/maintenance-history.component.html
+++ b/src/app/maintenance/maintenance-history/maintenance-history.component.html
@@ -37,7 +37,7 @@
             [(ngModel)]="office"
             required
             id="office"
-            (ngModelChange)="filterResources()"
+            (ngModelChange)="getHistory()"
             class="bg-gray-100 rounded-md focus:ring-brand focus:outline-none focus:border-brand w-full"
           >
             <ng-container
@@ -57,7 +57,7 @@
           <div class="w-1/2 mr-3">
             <label class="text-gray-400" for="from">Desde:</label>
             <input
-              name="from"
+              name="from" (ngModelChange)="getHistory()"
               [(ngModel)]="from"
               class="bg-gray-100 rounded-md focus:ring-brand focus:outline-none focus:border-brand w-full"
               type="date"
@@ -66,7 +66,7 @@
           <div class="w-1/2">
             <label class="text-gray-400" for="to">Hasta:</label>
             <input
-              name="to"
+              name="to" (ngModelChange)="getHistory()"
               [(ngModel)]="to"
               class="bg-gray-100 rounded-md focus:ring-brand focus:outline-none focus:border-brand w-full"
               type="date"
@@ -75,18 +75,18 @@
         </div>
          <!-- Días estado -->
          <div class="flex flex-col flex-1 my-3 lg:my-0 mx-4 w-full">
-          <label class="text-gray-400" for="client">Días estado:</label>
+          <label class="text-gray-400" for="days">Días estado:</label>
           <select
-            name="client"
-            [(ngModel)]="client"
-            id="client"
-            (ngModelChange)="selectClient()"
+            name="days"
+            [(ngModel)]="days"
+            id="days"
+            (ngModelChange)="getHistory()"
             class="bg-gray-100 rounded-md focus:ring-brand focus:outline-none focus:border-brand w-full"
           >
-            <option [value]="''">A tiempo</option>
-            <option [value]="''">entre 1 y 3 días</option>
-            <option [value]="''">Entre 4 y 5 días</option>
-            <option [value]="''">Más de 6 días</option>
+            <option [value]="0">A tiempo</option>
+            <option [value]="3">entre 1 y 3 días</option>
+            <option [value]="5">Entre 4 y 5 días</option>
+            <option [value]="6">Más de 6 días</option>
 
           </select>
         </div>
@@ -95,7 +95,7 @@
           <!-- Reference -->
           <div>
             <label class="text-gray-400" for="reference">Referencia:</label>
-            <input name="reference" [(ngModel)]="reference" (ngModelChange)="filterResources()"
+            <input name="reference" [(ngModel)]="reference" (ngModelChange)="getHistory()"
               class="bg-gray-100 rounded-md focus:ring-brand focus:outline-none focus:border-brand" type="text">
           </div>
         </div>
