--- a/src/app/repair/repair-pending/repair-pending.component.html
+++ b/src/app/repair/repair-pending/repair-pending.component.html
@@ -79,10 +79,10 @@
               (ngModelChange)="selectClient()"
               class="bg-gray-100 rounded-md focus:ring-brand focus:outline-none focus:border-brand w-full"
             >
-              <option [value]="'0'">A tiempo</option>
-              <option [value]="'3'">entre 1 y 3 días</option>
-              <option [value]="'5'">Entre 4 y 5 días</option>
-              <option [value]="'6'">Más de 6 días</option>
+              <option [value]="0">A tiempo</option>
+              <option [value]="3">entre 1 y 3 días</option>
+              <option [value]="5">Entre 4 y 5 días</option>
+              <option [value]="6">Más de 6 días</option>
             </select>
           </div>
           <div class="flex flex-row flex-1 my-3 lg:my-0 mx-4 w-1/2">
@@ -92,18 +92,10 @@
               <input
                 name="reference"
                 [(ngModel)]="reference"
+                (ngModelChange)="filterResources()"
                 class="bg-gray-100 rounded-md focus:ring-brand focus:outline-none focus:border-brand"
                 type="text"
               />
-            </div>
-            <!-- Filter button -->
-            <div class="flex items-end">
-              <button
-                class="btn-primary hover:bg-green-900 mx-5 xl:my-0"
-                (click)="filterResources()"
-              >
-                <span>Filtrar</span>
-              </button>
             </div>
           </div>
         </div>
